--- a/Bombon.mw
+++ b/Bombon.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator camarines sur bombon.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Bombon, Camarines Sur
 | 1990 = 10874		
@@ -13,7 +14,6 @@
 |}}
 Say '''Bombon''' et kumalima ya klase baley ed luyag na [[Camarines Sur]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 16,512 totoo. Walay kabaleg tan sukat to ya 28.73 sq. km. Sikato et walad kumatlo ya distrito. Say zip code to et 4404.	
 		
-
 ==Saray barangay==
 * San Antonio
 * San Francisco
@@ -24,10 +24,14 @@ Say '''Bombon''' et kumalima ya klase baley ed luyag na [[Camarines Sur]], [[Pil
 * Siembre
 * Santo Domingo
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Camarines Sur}}													
+{{Camarines Sur}}	
+												
 [[Category:Saray baley na Camarines Sur]]
