--- a/Cabusao.mw
+++ b/Cabusao.mw
@@ -1,4 +1,4 @@
-[[File:Ph locator camarines sur cabusao.png|right|270px]]
+{{Infobox location}}
 			
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Cabusao, Camarines Sur
@@ -14,7 +14,6 @@
 |}}
 Say '''Cabusao''' et kumalima ya klase baley ed luyag na [[Camarines Sur]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 18 397 totoo. Walay kabaleg tan sukat to ya 46.8 sq. km. Sikato et walad unaan ya distrito. Say zip code to et 4406.	
 		
-
 ==Saray barangay==
 
 * Barcelonita
@@ -27,10 +26,14 @@ Say '''Cabusao''' et kumalima ya klase baley ed luyag na [[Camarines Sur]], [[Pi
 * Santa Cruz
 * Santa Lutgarda (Poblacion)
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Camarines Sur}}												
+{{Camarines Sur}}	
+											
 [[Category:Saray baley na Camarines Sur]]
