--- a/Camaligan.mw
+++ b/Camaligan.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator camarines sur camaligan.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Camaligan, Camarines Sur
 | 1990 = 15436		
@@ -13,7 +14,6 @@
 |}}
 Say '''Camaligan''' et kumalima ya klase baley ed luyag na [[Camarines Sur]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 24,109 totoo. Walay kabaleg tan sukat to ya 4.68 sq. km. Sikato et walad kumatlo ya distrito. Say zip code to et 4401.	
 			
-
 ==Saray barangay==
 * Dugcal
 * Marupit
@@ -29,10 +29,14 @@ Say '''Camaligan''' et kumalima ya klase baley ed luyag na [[Camarines Sur]], [[
 * Sua
 * Tarosanan
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Camarines Sur}}												
+{{Camarines Sur}}	
+											
 [[Category:Saray baley na Camarines Sur]]
