--- a/Pandan,_Catanduanes.mw
+++ b/Pandan,_Catanduanes.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator catanduanes pandan.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Pandan, Catanduanes
 | 1990 = 15784		
@@ -13,7 +14,6 @@
 |}}
 Say '''Pandan''' et kumapat ya klase baley ed luyag na [[Catanduanes]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 20,516 totoo. Walay kabaleg tan sukat to ya 119.9 sq. km. Sikato et walad alenleneg ya distrito. Say zip code to et 4809.	
 	
-
 ==Saray barangay==
 * Bagawang
 * Balagñonan
@@ -42,10 +42,14 @@ Say '''Pandan''' et kumapat ya klase baley ed luyag na [[Catanduanes]], [[Pilipi
 * Tokio
 * Wagdas
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Catanduanes}}														
+{{Catanduanes}}		
+												
 [[Category:Saray baley na Catanduanes]]
