--- a/Panganiban.mw
+++ b/Panganiban.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator catanduanes panganiban.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Panganiban, Catanduanes
 | 1990 = 8344		
@@ -13,7 +14,6 @@
 |}}
 Say '''Panganiban''' et kumalima ya klase baley ed luyag na [[Catanduanes]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 9,287 totoo. Walay kabaleg tan sukat to ya 79.96 sq. km. Sikato et walad alenleneg ya distrito. Say zip code to et 4806.	
 		
-
 ==Saray barangay==
 * Alinawan
 * Babaguan
@@ -39,10 +39,14 @@ Say '''Panganiban''' et kumalima ya klase baley ed luyag na [[Catanduanes]], [[P
 * Santo Santiago (Poblacion)
 * Tibo
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Catanduanes}}													
+{{Catanduanes}}		
+											
 [[Category:Saray baley na Catanduanes]]
