--- a/San_Miguel,_Catanduanes.mw
+++ b/San_Miguel,_Catanduanes.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator catanduanes san miguel.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> San Miguel, Catanduanes
 | 1990 = 11587		
@@ -13,7 +14,6 @@
 |}}
 Say '''San Miguel''' et kumalima ya klase baley ed luyag na [[Catanduanes]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 15,006 totoo. Walay kabaleg tan sukat to ya 129.94 sq. km. Sikato et walad alenleneg ya distrito. Say zip code to et 4802.	
 		
-
 ==Saray barangay==
 * Balatohan
 * Salvacion (Patagan)
@@ -40,10 +40,14 @@ Say '''San Miguel''' et kumalima ya klase baley ed luyag na [[Catanduanes]], [[P
 * Solong
 * Tobrehon
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Catanduanes}}													
+{{Catanduanes}}	
+												
 [[Category:Saray baley na Catanduanes]]
