--- a/Viga.mw
+++ b/Viga.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator catanduanes viga.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Viga, Catanduanes
 | 1990 = 16270		
@@ -13,7 +14,6 @@
 |}}
 Say '''Viga''' et kumapat ya klase baley ed luyag na [[Catanduanes]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 21,624 totoo. Walay kabaleg tan sukat to ya 158.23 sq. km. Sikato et walad alenleneg ya distrito. Say zip code to et 4805.	
 		
-
 ==Saray barangay==
 * Almojuela
 * Ananong
@@ -47,10 +47,14 @@ Say '''Viga''' et kumapat ya klase baley ed luyag na [[Catanduanes]], [[Pilipina
 * Tinago
 * Villa Aurora
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Catanduanes}}													
+{{Catanduanes}}		
+											
 [[Category:Saray baley na Catanduanes]]
