--- a/Alfonso.mw
+++ b/Alfonso.mw
@@ -1,23 +1,4 @@
-{{translation}}
-
-{{Infobox Philippine city |
- infoboxtitle = Baley na Alfonso (al-Fonso)<br>''Commune di Alfonzo''|
- sealfile     = |
- locatormapfile = Ph_locator_cavite_alfonso.png |
- caption      = Map of [[Cavite]] showing the location of al-Fonso. |
- region       = [[CALABARZON]] (Rehiyon IV-A) |
- province     = [[Cavite]] |
- districts    = 7th district |
- barangays    = 32 |
- class        = 3rd class |
- mayor        = [[José Peñano]] |
- founded      = - |
- cityhood     = - |
- areakm2      =  |
- pop2000      =  |
- popden2000   = |
- coordinates  = "al-Fonso" ed lubay na [[salitan Arabiko]] tan suraten ed salitan English sakey Alfonso |
-}}
+{{Infobox location}}
 
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Alfonso, Cavite
@@ -32,10 +13,9 @@
 | 2030 = 		
 |}}
 
-Say '''Alfonso''' ([[salitan Italiano|Italiano]]: ''Commune di Alfonzo''; [[salitan Arabiko|Arabiko]]: ''al-Fonso''), sakey baley diad [[Filipinas|Pilipino]] ed [[Cavite]].
+Say '''Alfonso''' sakey baley diad [[Filipinas|Pilipino]] ed [[Cavite]].
 
 == Listaan na barangay ==
-
 
 Saray [[barangay]] ed Alfonso no thirty two:
 {| border="0"
@@ -78,21 +58,8 @@ Saray [[barangay]] ed Alfonso no thirty two:
 * Santa Teresa
 |}
 
-==Saray lokasiyon==
-
-===Puneraria===
-* [[Funeraria Mabini]]
-
-===Eskuela===
-* [[Pansin Elementary School]]
-
-===Kainan===
-
-
-===Sanglaan===
-* [[Cebuana Lhuillier]] Alfonso
-* [[M Lhuillier]] Alfonso
-
+== Saray reperensiya ==
+{{Reflist}}
 
 {{philippines-geo-stub}}
 {{Cavite}}
