--- a/Carmona.mw
+++ b/Carmona.mw
@@ -1,23 +1,4 @@
-{{translation}}
-
-{{Infobox Philippine city |
- infoboxtitle = Municipality of Carmona<br />''Municipalidad de Carmona''<br />''Baley na Karmona''|
- sealfile     =|
- locatormapfile = Ph_locator_cavite_carmona.png |
- caption      = Map of [[Cavite]] showing the location of Carmona. |
- region       = [[CALABARZON]] (Rehiyon IV-A) |
- province     = [[Cavite]] |
- districts    = 5th district |
- barangays    = 14 |
- class        = first class |
- mayor        = Mrs. [[Dahlia Loyola]] |
- founded      = Pebrero 20, [[1857]] |
- cityhood     = - |
- areakm2      = 40.24000 |
- pop2000      = 74,9860 |
- popden2000   = 1693|
- coordinates  = |
-}}
+{{Infobox location}}
 
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Carmona, Cavite
@@ -32,10 +13,9 @@
 | 2030 = 		
 |}}
 
-Say '''Karmona''' (e.g. ''Carmona''), sakey kaddakkelan a baley diad [[Filipinas|Pilipino]] ed [[Cavite]].
+Say '''Carmona''' sakey kaddakkelan a baley diad [[Filipinas|Pilipino]] ed [[Cavite]].
 
 == Listaan na barangay ==
-
 
 Saray [[barangay]] no fourteen:
 
@@ -54,22 +34,8 @@ Saray [[barangay]] no fourteen:
 * Barangay 13 '''[[Lantic]]''' - Ang pinakamalaking barangay ng Carmona, kung saan karamihan sa mga lupain dito ay sakahan.
 * Barangay 14 '''[[Bancal]]''' - Ang pinakadulong barangay ng Carmona, matatagpuan sa katimugang bahagi ng bayan, at naghahanggan sa bayan ng [[Silang, Cavite|Silang]] sa timog at sa [[Gen. Mariano Alvarez, Cavite|Gen. Mariano Alvarez]] sa kanluran.
 
-== Saray lokasiyon ==
-
-=== Tinda ===
-* [[Angel Ann Store]]
-* [[Anna Store (Carmona)|Anna Store]]
-
-=== Eskuela ===
-* [[Carmona Elementary School]]
-* [[Maduya Elementary School]]
-
-=== Kainan ===
-* [[Jollibee]] [[Walter Mart]]
-* [[7-11]]
 
 == Lokasiyon ed Hiyograpiko ==
-
 
 {{Geographic Location
 |Centre    = Carmona
@@ -83,7 +49,10 @@ Saray [[barangay]] no fourteen:
 |Northwest = 
 }}
 
-{{philippines-geo-stub}}
+== Saray reperensiya ==
+{{Reflist}}
+
 {{Cavite}}
+{{philippines-geo-stub}}
 
 [[Category:Saray baley na Cavite]]
