--- a/Maragusan.mw
+++ b/Maragusan.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator compostela valley maragusan.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Maragusan, Compostela Valley
 | 1990 = 40982		
@@ -13,7 +14,6 @@
 |}}
 Say '''Maragusan''' et unaan ya klase baley ed luyag na [[Compostela Valley]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 55,503 totoo. Walay kabaleg tan sukat to ya 394.27 sq. km. Sikato et walad unaan ya distrito. Say zip code to et 8808.	
 		
-
 ==Saray barangay==
 * Bagong Silang
 * Mapawa
@@ -40,10 +40,14 @@ Say '''Maragusan''' et unaan ya klase baley ed luyag na [[Compostela Valley]], [
 * Tandik
 * Tigbao
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Compostela Valley}}													
+{{Compostela Valley}}	
+												
 [[Category:Saray baley na Compostela Valley]]
