--- a/Mawab.mw
+++ b/Mawab.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator compostela valley mawab.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Mawab, Compostela Valley
 | 1990 = 28072		
@@ -13,7 +14,6 @@
 |}}
 Say '''Mawab''' et kumatlo ya klase baley ed luyag na [[Compostela Valley]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 35,698 totoo. Walay kabaleg tan sukat to ya 136.1 sq. km. Sikato et walad kumadwa ya distrito. Say zip code to et 8802.	
 	
-
 ==Saray barangay==
 * Andili
 * Bawani
@@ -27,10 +27,14 @@ Say '''Mawab''' et kumatlo ya klase baley ed luyag na [[Compostela Valley]], [[P
 * Sawangan
 * Tuboran
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Compostela Valley}}														
+{{Compostela Valley}}	
+													
 [[Category:Saray baley na Compostela Valley]]
