--- a/Montevista.mw
+++ b/Montevista.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator compostela valley montevista.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Montevista, Compostela Valley
 | 1990 = 29789		
@@ -13,7 +14,6 @@
 |}}
 Say '''Montevista''' et kumatlo ya klase baley ed luyag na [[Compostela Valley]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 39,602 totoo. Walay kabaleg tan sukat to ya 225 sq. km. Sikato et walad unaan ya distrito. Say zip code to et 8801.	
 	
-
 ==Saray barangay==
 * Banagbanag
 * Banglasan
@@ -36,10 +36,14 @@ Say '''Montevista''' et kumatlo ya klase baley ed luyag na [[Compostela Valley]]
 * San Vicente
 * Tapia
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Compostela Valley}}														
+{{Compostela Valley}}	
+													
 [[Category:Saray baley na Compostela Valley]]
