--- a/New_Bataan.mw
+++ b/New_Bataan.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator compostela valley new bataan.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> New Bataan, Compostela Valley
 | 1990 = 39629		
@@ -13,7 +14,6 @@
 |}}
 Say '''New Bataan''' et unaan ya klase baley ed luyag na [[Compostela Valley]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 47,470 totoo. Walay kabaleg tan sukat to ya 553.15 sq. km. Sikato et walad unaan ya distrito. Say zip code to et 8804.	
 	
-
 ==Saray barangay==
 * Bantacan
 * Batinao
@@ -32,10 +32,14 @@ Say '''New Bataan''' et unaan ya klase baley ed luyag na [[Compostela Valley]], 
 * Manurigao
 * Tandawan
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Compostela Valley}}														
+{{Compostela Valley}}		
+												
 [[Category:Saray baley na Compostela Valley]]
