--- a/Template:Kalendaryo.mw
+++ b/Template:Kalendaryo.mw
@@ -1,9 +1,8 @@
 <includeonly>{{#if:{{{1|}}}
   |{{kalendaryo/{{{1}}}
      |year={{{year|{{#time:Y}}}}}
-     |base={{{base|{{#titleparts:{{title without disambig|{{kalendaryo/bulan-en}}}}|2}}}}}
-     |sub={{#titleparts:{{title without disambig|{{kalendaryo/bulan-en}}}}/XXX|1|3}}
-     |zero={{{zero|{{0}}}}}
+     |base={{{base|{{#titleparts:{{kalendaryo/bulan-en}}|2}}}}}
+     |sub={{#titleparts:{{kalendaryo/bulan-en}}/XXX|1|3}}
      |titlestyle={{#if:{{{title_colour|{{{colour|}}}}}}
         |background-color:{{{title_colour|{{{colour}}}}}};
       }}
@@ -13,8 +12,8 @@
    }}
   |{{#ifeq:{{NAMESPACE}}|Portal
      |{{kalendaryo/portal
-        |base={{{base|{{#titleparts:{{title without disambig|{{kalendaryo/bulan-en}}}}|2}}}}}
-        |sub={{#titleparts:{{title without disambig|{{kalendaryo/bulan-en}}}}/XXX|1|3}}
+        |base={{{base|{{#titleparts:{{kalendaryo/bulan-en}}|2}}}}}
+        |sub={{#titleparts:{{kalendaryo/bulan-en}}/XXX|1|3}}
         |title={{{title|}}}
         |col={{{col|4}}}
         |tm={{{txt_pref_m|}}}
@@ -31,7 +30,6 @@
         |year={{{year|{{#time:Y}}}}}
         |show_year={{{show_year|off}}}
         |F={{#ifeq:{{{show_year|on}}}|with month|F Y|F}}
-        |zero={{{zero|{{0}}}}}
         |format={{{format|Sun1st}}}
         |float={{{float|right}}}
         |clear={{{clear|none}}}
@@ -43,11 +41,8 @@
         |weekstyle={{#if:{{{week_colour|{{{colour|}}}}}}
            |background-color:{{{week_colour|{{{colour}}}}}};
          }}
-        |wknumstyle={{#if:{{{wknum_colour|}}}
-           |background-color:{{{wknum_colour}}};
-         }}
       }}
-     |{{#iferror:{{#time:|{{title without disambig|{{kalendaryo/bulan-en}}}}}}
+     |{{#iferror:{{#time:|{{kalendaryo/bulan-en}}}}
         |{{#if:{{{month|}}}
            |{{kalendaryo/month/link {{#if:{{{lk_pref|}}}{{{lk_pref_d|}}}{{{lk_pref_m|}}}<!--
                         -->{{{lk_suff|}}}{{{lk_suff_d|}}}{{{lk_suff_m|}}}<!--
@@ -79,7 +74,6 @@
               |year={{{year|{{#time:Y}}}}}
               |show_year={{#ifeq:{{{show_year|on}}}|on|on|off}}
               |F={{#ifeq:{{{show_year|on}}}|with month|F Y|F}}
-              |zero={{{zero|{{0}}}}}
               |format={{{format|Sun1st}}}
               |float={{{float|none}}}
               |clear={{{clear|none}}}
@@ -95,16 +89,12 @@
               |weekstyle={{#if:{{{week_colour|{{{colour|}}}}}}
                  |background-color:{{{week_colour|{{{colour}}}}}};
                }}   
-              |wknumstyle={{#if:{{{wknum_colour|}}}
-                 |background-color:{{{wknum_colour}}};
-               }}
             }}
-           |{{kalendaryo/{{{row|{{{col|4}}}}}}-{{#if:{{{row|}}}|row|column}}
+           |{{kalendaryo/{{{col|4}}}-column
               |title={{{title|}}}
               |year={{{year|{{#time:Y}}}}}
               |show_year={{#ifeq:{{{show_year|on}}}|on|on|off}}
               |F={{#ifeq:{{{show_year|on}}}|with month|F Y|F}}
-              |zero={{{zero|{{0}}}}}
               |format={{{format|Sun1st}}} 
                  |lk={{#if:{{{lk_pref|}}}{{{lk_pref_d|}}}{{{lk_pref_m|}}}<!--
                         -->{{{lk_suff|}}}{{{lk_suff_d|}}}{{{lk_suff_m|}}}<!--
@@ -136,25 +126,20 @@
               |weekstyle={{#if:{{{week_colour|{{{colour|}}}}}}
                  |background-color:{{{week_colour|{{{colour}}}}}};
                }}   
-              |wknumstyle={{#if:{{{wknum_colour|}}}
-                 |background-color:{{{wknum_colour}}};
-               }}   
-              |wk5253={{{wk5253|}}}
             }}
          }}
-        |{{kalendaryo/{{#ifeq:{{title without disambig|{{kalendaryo/bulan-en}}}}|{{#time:Y|{{title without disambig|{{kalendaryo/bulan-en}}}}}}
-              |{{{row|{{{col|4}}}}}}-{{#if:{{{row|}}}|row|column}}
+        |{{kalendaryo/{{#ifeq:{{kalendaryo/bulan-en}}|{{#time:Y|{{kalendaryo/bulan-en}}}}
+              |{{{col|4}}}-column
               |month/link {{{lk|on}}}
             }}
            |title={{{title|}}}
-           |year={{{year|{{#time:Y|{{title without disambig|{{kalendaryo/bulan-en}}}}}}}}}
-           |show_year={{#ifeq:{{title without disambig|{{kalendaryo/bulan-en}}}}|{{#time:F Y|{{title without disambig|{{kalendaryo/bulan-en}}}}}}|off|on}}
-           |F={{#ifeq:{{title without disambig|{{kalendaryo/bulan-en}}}}|{{#time:F Y|{{title without disambig|{{kalendaryo/bulan-en}}}}}}|F Y|F}}
+           |year={{{year|{{#time:Y|{{kalendaryo/bulan-en}}}}}}}
+           |show_year={{#ifeq:{{kalendaryo/bulan-en}}|{{#time:F Y|{{kalendaryo/bulan-en}}}}|off|on}}
+           |F={{#ifeq:{{kalendaryo/bulan-en}}|{{#time:F Y|{{kalendaryo/bulan-en}}}}|F Y|F}}
            |float={{{float|right}}}
-           |month={{{month|{{#time:F|{{title without disambig|{{kalendaryo/bulan-en}}}} 1}}}}}
+           |month={{kalendaryo/bulan-en|{{{month|{{#time:F|{{kalendaryo/bulan-en}} 1}}}}}}}
            |lk={{{lk|on}}}
            |EndNote={{{EndNote|}}}
-           |zero={{{zero|{{0}}}}}
            |titlestyle={{#if:{{{title_colour|{{{colour|}}}}}}
               |background-color:{{{title_colour|{{{colour}}}}}};
             }}
