--- a/Aleosan.mw
+++ b/Aleosan.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator cotabato aleosan.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Aleosan, Cotabato  
 | 1990 = 22574		
@@ -13,7 +14,6 @@
 |}}
 Say '''Aleosan''' et kumatlo ya klase baley ed luyag na [[Cotabato]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 35,746 totoo. Walay kabaleg tan sukat to ya 225.44 sq. km. Sikato et walad unaan ya distrito. Say zip code to et 9415.	
 	
-
 ==Saray barangay==
 * Bagolibas
 * Cawilihan
@@ -35,10 +35,14 @@ Say '''Aleosan''' et kumatlo ya klase baley ed luyag na [[Cotabato]], [[Pilipina
 * Tomado
 * Upper Mingading
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Cotabato}}														
+{{Cotabato}}	
+													
 [[Category:Saray baley na Cotabato]]
