--- a/Antipas.mw
+++ b/Antipas.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator cotabato antipas.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Antipas, Cotabato  
 | 1990 = 17800		
@@ -13,7 +14,6 @@
 |}}
 Say '''Antipas''' et kumadwa ya klase baley ed luyag na [[Cotabato]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 25,242 totoo. Walay kabaleg tan sukat to ya 552.5 sq. km. Sikato et walad kumadwa ya distrito. Say zip code to et 9414.	
 	
-
 ==Saray barangay==
 * Camutan
 * Canaan
@@ -29,10 +29,14 @@ Say '''Antipas''' et kumadwa ya klase baley ed luyag na [[Cotabato]], [[Pilipina
 * B. Cadungon
 * Datu Agod
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Cotabato}}													
+{{Cotabato}}		
+											
 [[Category:Saray baley na Cotabato]]
