--- a/Arakan.mw
+++ b/Arakan.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator cotabato arakan.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Arakan, Cotabato  
 | 1990 = 26576		
@@ -13,7 +14,6 @@
 |}}
 Say '''Arakan''' et kumadwa ya klase baley ed luyag na [[Cotabato]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 43,554 totoo. Walay kabaleg tan sukat to ya 693.22 sq. km. Sikato et walad kumadwa ya distrito. Say zip code to et 9417.	
 	
-
 ==Saray barangay==
 *Allab
 *Anapolon
@@ -44,10 +44,14 @@ Say '''Arakan''' et kumadwa ya klase baley ed luyag na [[Cotabato]], [[Pilipinas
 *Sumalili
 *Tumanding
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Cotabato}}														
+{{Cotabato}}	
+													
 [[Category:Saray baley na Cotabato]]
