--- a/Banisilan.mw
+++ b/Banisilan.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator cotabato banisilan.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Banisilan, Cotabato  
 | 1990 = 36213		
@@ -13,7 +14,6 @@
 |}}
 Say '''Banisilan''' et kumadwa ya klase baley ed luyag na [[Cotabato]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 39,914 totoo. Walay kabaleg tan sukat to ya 577.22 sq. km. Sikato et walad kumatlo ya distrito. Say zip code to et 9416.	
 		
-
 ==Saray barangay==
 * Busaon
 * Capayangan
@@ -36,10 +36,14 @@ Say '''Banisilan''' et kumadwa ya klase baley ed luyag na [[Cotabato]], [[Pilipi
 * Tumbao-Camalig
 * Wadya
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Cotabato}}													
+{{Cotabato}}	
+												
 [[Category:Saray baley na Cotabato]]
