--- a/Kabacan.mw
+++ b/Kabacan.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator cotabato kabacan.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Kabacan, Cotabato  
 | 1990 = 32055		
@@ -13,7 +14,6 @@
 |}}
 Say '''Kabacan''' et unaan ya klase baley ed luyag na [[Cotabato]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 81,282 totoo. Walay kabaleg tan sukat to ya 448.09 sq. km. Sikato et walad kumatlo ya distrito. Say zip code to et 9407.	
 	
-
 ==Saray barangay==
 * Aringay
 * Bangilan
@@ -40,10 +40,14 @@ Say '''Kabacan''' et unaan ya klase baley ed luyag na [[Cotabato]], [[Pilipinas]
 * Simone
 * Tamped
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Cotabato}}													
+{{Cotabato}}		
+											
 [[Category:Saray baley na Cotabato]]
