--- a/Guiuan.mw
+++ b/Guiuan.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator eastern samar guiuan.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Guiuan, Eastern Samar
 | 1990 = 33825		
@@ -13,7 +14,6 @@
 |}}
 Say '''Guiuan''' et kumadwa ya klase baley ed luyag na [[Eastern Samar]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 47,037 totoo. Walay kabaleg tan sukat to ya 175.49 sq. km. Sikato et walad alenleneg ya distrito. Say zip code to et 6809.	
 	
-
 ==Saray barangay==
 * Alingarog
 * Bagua
@@ -77,10 +77,14 @@ Say '''Guiuan''' et kumadwa ya klase baley ed luyag na [[Eastern Samar]], [[Pili
 * Santo Niño
 * Tagporo 
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Eastern Samar}}														
+{{Eastern Samar}}	
+													
 [[Category:Saray baley na Eastern Samar]]
