--- a/Hernani.mw
+++ b/Hernani.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator eastern samar hernani.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Hernani, Eastern Samar
 | 1990 = 6840		
@@ -13,7 +14,6 @@
 |}}
 Say '''Hernani''' et kumalima ya klase baley ed luyag na [[Eastern Samar]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 8,070 totoo. Walay kabaleg tan sukat to ya 49.42 sq. km. Sikato et walad alenleneg ya distrito. Say zip code to et 6804.	
 	
-
 ==Saray barangay==
 * Barangay 1
 * Barangay 2
@@ -29,10 +29,14 @@ Say '''Hernani''' et kumalima ya klase baley ed luyag na [[Eastern Samar]], [[Pi
 * San Isidro
 * Cacatmonan
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Eastern Samar}}														
+{{Eastern Samar}}	
+													
 [[Category:Saray baley na Eastern Samar]]
