--- a/Jipapad.mw
+++ b/Jipapad.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator eastern samar jipapad.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Jipapad, Eastern Samar
 | 1990 = 5207		
@@ -13,7 +14,6 @@
 |}}
 Say '''Jipapad''' et kumalima ya klase baley ed luyag na [[Eastern Samar]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 7,397 totoo. Walay kabaleg tan sukat to ya 234.8 sq. km. Sikato et walad alenleneg ya distrito. Say zip code to et 6819.	
 	
-
 ==Saray barangay==
 * Agsaman
 * Cagmanaba
@@ -29,10 +29,14 @@ Say '''Jipapad''' et kumalima ya klase baley ed luyag na [[Eastern Samar]], [[Pi
 * Roxas
 * San Roque
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Eastern Samar}}														
+{{Eastern Samar}}	
+													
 [[Category:Saray baley na Eastern Samar]]
