--- a/Llorente.mw
+++ b/Llorente.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator eastern samar llorente.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Llorente, Eastern Samar
 | 1990 = 18278		
@@ -13,7 +14,6 @@
 |}}
 Say '''Llorente''' et kumatlo ya klase baley ed luyag na [[Eastern Samar]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 19,101 totoo. Walay kabaleg tan sukat to ya 496.07 sq. km. Sikato et walad alenleneg ya distrito. Say zip code to et 6803.	
 	
-
 ==Saray barangay==
 * Antipolo
 * Babanikhon
@@ -49,10 +49,14 @@ Say '''Llorente''' et kumatlo ya klase baley ed luyag na [[Eastern Samar]], [[Pi
 * Tabok
 * Waso
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Eastern Samar}}														
+{{Eastern Samar}}		
+												
 [[Category:Saray baley na Eastern Samar]]
