--- a/Maydolong.mw
+++ b/Maydolong.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator eastern samar maydolong.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Maydolong, Eastern Samar
 | 1990 = 10656		
@@ -13,7 +14,6 @@
 |}}
 Say '''Maydolong''' et kumapat ya klase baley ed luyag na [[Eastern Samar]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 13,614 totoo. Walay kabaleg tan sukat to ya 399.63 sq. km. Sikato et walad alenleneg ya distrito. Say zip code to et 6802.	
 	
-
 ==Saray barangay==
 * Camada
 * Campakerit (Botay)
@@ -36,10 +36,14 @@ Say '''Maydolong''' et kumapat ya klase baley ed luyag na [[Eastern Samar]], [[P
 * San Gabriel
 * Tagaslian
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Eastern Samar}}														
+{{Eastern Samar}}	
+													
 [[Category:Saray baley na Eastern Samar]]
