--- a/Mercedes,_Eastern_Samar.mw
+++ b/Mercedes,_Eastern_Samar.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator eastern samar mercedes.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Mercedes, Eastern Samar
 | 1990 = 4505		
@@ -13,7 +14,6 @@
 |}}
 Say '''Mercedes''' et kumalima ya klase baley ed luyag na [[Eastern Samar]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 6,070 totoo. Walay kabaleg tan sukat to ya 23.32 sq. km. Sikato et walad alenleneg ya distrito. Say zip code to et 6808.	
 	
-
 ==Saray barangay==
 * Anuron
 * Banuyo
@@ -32,10 +32,14 @@ Say '''Mercedes''' et kumalima ya klase baley ed luyag na [[Eastern Samar]], [[P
 * Port Kennedy
 * San Roque
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Eastern Samar}}														
+{{Eastern Samar}}	
+													
 [[Category:Saray baley na Eastern Samar]]
