--- a/Quinapondan.mw
+++ b/Quinapondan.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator eastern samar quinapondan.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Quinapondan, Eastern Samar
 | 1990 = 10986		
@@ -13,7 +14,6 @@
 |}}
 Say '''Quinapondan''' et kumalima ya klase baley ed luyag na [[Eastern Samar]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 14,779 totoo. Walay kabaleg tan sukat to ya 83.24 sq. km. Sikato et walad alenleneg ya distrito. Say zip code to et 6810.	
 	
-
 ==Saray barangay==
 * Baranggay Anislag
 * Bagte
@@ -41,10 +41,14 @@ Say '''Quinapondan''' et kumalima ya klase baley ed luyag na [[Eastern Samar]], 
 * Barangay No. 7 (Pob.)
 * San Isidro
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Eastern Samar}}														
+{{Eastern Samar}}	
+													
 [[Category:Saray baley na Eastern Samar]]
